# PaperLibrary

./: README.md
.devcontainer/: Dockerfile  app.env  devcontainer.json  docker-compose.yml  post-create.sh  task
.devcontainer/web/conf.d/: default.conf
.docker/: Dockerfile  app.env  docker-compose.yml
.docker/web/conf.d/: default.conf
app/: __init__.py  logging.conf  main.py  pyproject.toml
app/errors/: __init__.py  errors.py  messages.py
app/factories/: __init__.py  favorite.py  paper.py  paper_stock.py  quey.py
app/jobs/: __init__.py  fetch_arxiv.py
app/migration/versions/: 202109132131_create_papers_queries_favorites_tables.py  202109161800_added_tables.py  202109171817_added_foreignkey_delete_cascade.py  202109201656_add_published_date.py  202109221701_add_publiched_at_column.py  202109230106_added_tables.py
app/models/: __init__.py  arxiv_query.py  favorite.py  paper.py  paper_stock.py  query.py  setting.py
app/models/factories/: __init__.py  arxiv_query.py  paper.py
app/request/: arxiv_query.py  paper.py
app/requests/: __init__.py  arxiv_query.py  paper.py  root.py
app/response/: __init__.py  arxiv_query.py  error.py  paper.py
app/responses/: __init__.py  arxiv_query.py  paper_stock.py  root.py
app/routers/: __init__.py  arxiv_query.py  paper_stock.py  papers.py
app/schemas/: __init__.py  errors.py
app/schemas/requests/: __init__.py  arxiv_query.py  paper.py
app/schemas/responses/: __init__.py  arxiv_query.py  error.py  paper.py  paper_stock.py
app/schemas/services/: __init__.py  arxiv.py
app/services/: __init__.py  arxiv_service.py
test/: conftest.py  search_results.pickle  test_main.py
test/jobs/: test_fetch_arxiv.py
test/models/: test_arxiv_query_model.py
test/routers/: test_arxiv_query.py  test_arxiv_quey.py
test/services/: test_arxiv_service.py
