[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
alembic = "^1.6.5"
psycopg2-binary = "^2.9.1"
SQLAlchemy = "^1.4.23"
factory-boy = "^3.2.0"
gunicorn = "^20.1.0"
requests = "^2.26.0"
cryptography = "^3.4.8"
fastapi-versioning = "^0.10.0"
SQLAlchemy-Utils = "^0.37.8"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
isort = "^5.9.3"
autopep8 = "^1.5.7"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
